--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:functional":"jest --projects ./test --runInBand",
+    "test:functional": "jest --projects ./test --runInBand",
     "start": "yarn build && node dist/src/index.js",
     "start:dev": "ts-node-dev 'src/index.ts'",
     "lint": "eslint ./src ./test --ext .ts",
-    "lint:fix": "eslint ./src ./test --ext .ts --fix"
+    "lint:fix": "eslint ./src ./test --ext .ts --fix",
+    "style:check":"prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix":"prettier --write 'src/**/*.ts' 'test/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -28,17 +30,22 @@
   },
   "homepage": "https://github.com/mcesarpl/node-typescript-api#readme",
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
-    "@types/node": "^16.11.2",
+    "@types/node": "14",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.0.1",
     "jest": "^27.3.1",
+    "prettier": "^2.4.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
