fix: removing singleQuote from directory path

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "style:check":"prettier --check 'src/**/*.ts' 'test/**/*.ts'",
-    "style:fix":"prettier --write 'src/**/*.ts' 'test/**/*.ts'"
+    "style:check":"prettier --check src/**/*.ts test/**/*.ts",
+    "style:fix":"prettier --write src/**/*.ts test/**/*.ts"
   },
   "repository": {
     "type": "git",
