--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "style:check":"prettier --check src/**/*.ts test/**/*.ts",
-    "style:fix":"prettier --write src/**/*.ts test/**/*.ts"
+    "style:check": "prettier --check src/**/*.ts test/**/*.ts",
+    "style:fix": "prettier --write src/**/*.ts test/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -31,11 +31,15 @@
   "homepage": "https://github.com/mcesarpl/node-typescript-api#readme",
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "axios": "^0.26.1",
     "body-parser": "^1.19.0",
+    "config": "^3.3.7",
     "express": "^4.17.1",
     "module-alias": "^2.2.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
