--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
-    "style:fix": "prettier --write src/**/*.ts test/**/*.ts"
+    "style:fix": "prettier --write src/**/*.ts test/**/*.ts",
+    "eslint:fix": "yarn lint:fix && yarn style:fix"
   },
   "repository": {
     "type": "git",
@@ -35,7 +36,8 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.7",
     "express": "^4.17.1",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mongoose": "^6.3.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -43,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "14",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
