--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
     "@types/mongoose": "^5.11.97",
+    "@types/nock": "^11.1.0",
     "@types/node": "14",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.0.1",
     "jest": "^27.3.1",
+    "nock": "^13.2.4",
     "prettier": "^2.4.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
